exports[`test should render the component with merged attributes 1`] = `
<div
  className="TestClass"
  data-mock="data"
  id="TestId">
  String
</div>
`;

exports[`test should support rendering a string as children 1`] = `
<div>
  String
</div>
`;

exports[`test should support rendering an array of elements as a children 1`] = `
<div>
  <h1>
    Heading
  </h1>
  <p>
    Element 1
  </p>
  <p>
    Element 2
  </p>
</div>
`;

exports[`test should support rendering an element as children 1`] = `
<div>
  <p>
    Element
  </p>
</div>
`;
